Finish static pages without css

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,13 @@
 <% provide(:title, "Home") %>
 
+<div>
 <h1>StaticPages#home</h1>
 <p>Find me in app/views/static_pages/home.html.erb !</p>
+
+<%= link_to "Sign up now!", signup_path %>
+
+
+<%= render 'layouts/countries' %>
+
+</div>
 
