--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,9 @@
 		<%= link_to "vicy app", '#', id: "logo" %>
 		<nav>
 			<ul>
-				<li><%= link_to "Home", '#' %></li>
+				<li><%= link_to "Home", 'root' %></li>
 				<li><%= link_to "Help", help_path %></li>
-				<li><%= link_to "User", users_new_path %></li>
+				<li><%= link_to "Users", users_path %></li>
 				<li><%= link_to "Log in", '#' %></li>
 			</ul>
 		</nav>
